# gridpulse-realtime-agent

./: .env.example  .gitignore  Makefile  README.es.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
dashboards/: app.py
docker/: docker-compose.yml
scripts/: bootstrap.sh  env.sh  run_agent_demo.py
src/: __init__.py
src/agent/: loop.py
src/producer/: replay.py
src/serving/: api.py
src/streaming/: consumer.py
src/tools/: __init__.py  classify_severity.py  get_24h_forecast.py  get_current_load.py  post_incident_report.py  registry.py  search_literature.py
src/utils/: config.py  llm.py  logging.py
tests/: test_agent_loop.py  test_api.py  test_classify_severity.py  test_tool_registry.py
