[project]
name = "gridpulse"
version = "0.1.0"
description = "Real-time grid intelligence agent — Kafka + Spark + LLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0915"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: tests hitting Kafka / MLflow / LLM",
    "slow: > 1 s",
]
